fastmetrics-derive/tests/ui/fail/encode_label_value/non_enum.rs
use fastmetrics_derive::EncodeLabelValue;

// This should fail because named-field structs are not supported.
#[derive(EncodeLabelValue)]
struct NotAnEnum {
    field: String,
}

fn main() {}
