fastmetrics-derive/tests/ui/fail/encode_label_value/non_enum.stderr
error: #[derive(EncodeLabelValue)] can only be used on enums or single-field tuple structs
 --> tests/ui/fail/encode_label_value/non_enum.rs:5:8
  |
5 | struct NotAnEnum {
  |        ^^^^^^^^^
